finish debugging and editting readme

--- a/src/index.html
+++ b/src/index.html
@@ -4,17 +4,10 @@
     <title>Home Page</title>
     <base href="/" />
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
     <link href="http://code.ionicframework.com/ionicons/1.5.2/css/ionicons.min.css" rel="stylesheet">
 
     <link href="./css/style.css" rel="stylesheet">
-
-    <!-- <script src="js/angular.min.js"></script>
-    <script src="js/angular-route.min.js"></script>
-
-    <script src="templates/detail/detailController.js"></script>
-    <script src="templates/list/listController.js"></script>
-    <script src="controllers.js"></script> -->
     <script src="./js/app.min.js"></script>
 
   </head>
